unpackaged/main/default/objects/litify_pm__Role__c/litify_pm__Role__c.object-meta.xml
<CustomObject>
    <description>The junction object defines the role between Party (Account) and Intakes or Matter object</description>
    <label>Role</label>
    <nameField>
        <displayFormat>ROL-{0}</displayFormat>
        <label>Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>