unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Additional_Trait__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Additional_Trait__c</fullName>
    <description>This field indicates the additional traits a role can have</description>
    <label>Additional Traits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caller</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Injured Party</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>