unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Comments__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>