unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Intake__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <type>Lookup</type>
</CustomField>