unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__lit_Referral_Percentage__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Referral_Percentage__c</fullName>
    <description>Describes the percentage of a referral for a role</description>
    <label>Referral Percentage</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>