unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Party__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party__c</fullName>
    <label>Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>