unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Party_Address__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party_Address__c</fullName>
    <formula>litify_pm__Party__r.BillingStreet
&amp; &#39; &#39; &amp;
litify_pm__Party__r.BillingCity
&amp; &#39; &#39; &amp;
litify_pm__Party__r.BillingState
&amp; &#39; &#39; &amp;
litify_pm__Party__r.BillingCountry
&amp; &#39; &#39; &amp;
litify_pm__Party__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Address</label>
    <type>Text</type>
</CustomField>