unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Party_Email__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party_Email__c</fullName>
    <description>This formula shows the email from the associated account</description>
    <formula>litify_pm__Party__r.litify_pm__Email__c</formula>
    <label>Party Email</label>
    <type>Text</type>
</CustomField>