unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Party_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party_Name__c</fullName>
    <formula>litify_pm__Party__r.Name</formula>
    <label>Party Name</label>
    <type>Text</type>
</CustomField>