unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Party_Phone__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Party_Phone__c</fullName>
    <formula>litify_pm__Party__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Phone</label>
    <type>Text</type>
</CustomField>