unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Related_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Related_Role_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(litify_pm__Parent_Role__c)), 

HYPERLINK(&quot;/&quot;+ litify_pm__Parent_Role__r.Id , litify_pm__Parent_Role__r.litify_pm__Party__r.Name ,&quot;_self&quot;) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Role Name</label>
    <type>Text</type>
</CustomField>