unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Role__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Role__c</fullName>
    <label>Role Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Court</fullName>
            </value>
            <value>
                <fullName>Defendant</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>Family Member</fullName>
            </value>
            <value>
                <fullName>Health Care Facility</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Investigator</fullName>
            </value>
            <value>
                <fullName>Judge</fullName>
            </value>
            <value>
                <fullName>Jury Member</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plaintiff</fullName>
            </value>
            <value>
                <fullName>Police Department</fullName>
            </value>
            <value>
                <fullName>Records Provider</fullName>
            </value>
            <value>
                <fullName>Witness</fullName>
            </value>
            <value>
                <fullName>Caller</fullName>
                <isActive>false</isActive>
                <label>Caller</label>
            </value>
            <value>
                <fullName>Employer</fullName>
                <isActive>false</isActive>
                <label>Employer</label>
            </value>
            <value>
                <fullName>Injured Party</fullName>
                <isActive>false</isActive>
                <label>Injured Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>