unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_pm__Subtype__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Subtype__c</fullName>
    <label>Role Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>litify_pm__Role__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addiction psychiatrist</fullName>
            </value>
            <value>
                <fullName>Adjuster</fullName>
            </value>
            <value>
                <fullName>Adolescent medicine specialist</fullName>
            </value>
            <value>
                <fullName>Allergist (immunologist)</fullName>
            </value>
            <value>
                <fullName>Ambulatory Surgical Center</fullName>
            </value>
            <value>
                <fullName>Anesthesiologist</fullName>
            </value>
            <value>
                <fullName>Aunt</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Cardiac electrophysiologist</fullName>
            </value>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Cardiovascular surgeon</fullName>
            </value>
            <value>
                <fullName>Colon and rectal surgeon</fullName>
            </value>
            <value>
                <fullName>Cousin</fullName>
            </value>
            <value>
                <fullName>Critical care medicine specialist</fullName>
            </value>
            <value>
                <fullName>Daughter</fullName>
            </value>
            <value>
                <fullName>Dermatologist</fullName>
            </value>
            <value>
                <fullName>Developmental pediatrician</fullName>
            </value>
            <value>
                <fullName>Doctor’s Office</fullName>
            </value>
            <value>
                <fullName>Emergency medicine specialist</fullName>
            </value>
            <value>
                <fullName>Endocrinologist</fullName>
            </value>
            <value>
                <fullName>Ex-Husband</fullName>
            </value>
            <value>
                <fullName>Ex-Wife</fullName>
            </value>
            <value>
                <fullName>Family medicine physician</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Forensic pathologist</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist</fullName>
            </value>
            <value>
                <fullName>Geriatric medicine specialist</fullName>
            </value>
            <value>
                <fullName>Granddaughter</fullName>
            </value>
            <value>
                <fullName>Grandfather</fullName>
            </value>
            <value>
                <fullName>Grandmother</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>