unpackaged/main/default/objects/litify_pm__Role__c/fields/litify_tso_Party_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>litify_tso_Party_Name_Text__c</fullName>
    <description>Populated by process and used as secondary field for search layout.</description>
    <label>Party Name (Text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>