unpackaged/main/default/objects/litify_pm__Role__c/fields/Merge_Assistant_Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Merge_Assistant_Party_Name__c</fullName>
    <formula>IF(
    CONTAINS(litify_pm__Party__r.RecordType.Name, &quot;Individual&quot;),
    litify_pm__Party__r.litify_pm__First_Name__c &amp;&quot; &quot;&amp; litify_pm__Party__r.litify_pm__Last_Name__c,
    litify_pm__Party__r.Name
)</formula>
    <label>Merge Assistant Party Name</label>
    <type>Text</type>
</CustomField>