unpackaged/main/default/objects/litify_pm__Role__c/fields/Party_Name_Updated__c.field-meta.xml
<CustomField>
    <fullName>Party_Name_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked automatically when the Party name is updated. This is unchecked after the Role lookup is triggered.</description>
    <inlineHelpText>Checked automatically when the Party name is updated. This is unchecked after the Role lookup is triggered.</inlineHelpText>
    <label>Party Name Updated</label>
    <type>Checkbox</type>
</CustomField>