unpackaged/main/default/objects/litify_pm__Role__c/fields/Role_Gender__c.field-meta.xml
<CustomField>
    <fullName>Role_Gender__c</fullName>
    <formula>TEXT(litify_pm__Party__r.litify_pm__Gender__c)</formula>
    <label>Role Gender</label>
    <type>Text</type>
</CustomField>