unpackaged/main/default/objects/litify_pm__Role__c/recordTypes/litify_pm__Intake_Role.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Intake_Role</fullName>
    <active>true</active>
    <label>Intake Role</label>
</RecordType>