unpackaged/main/default/objects/litify_pm__Role__c/recordTypes/litify_pm__Matter_Role.recordType-meta.xml
<RecordType>
    <fullName>litify_pm__Matter_Role</fullName>
    <active>true</active>
    <label>Matter Role</label>
</RecordType>